--- a/src/Sitecore.Support.140668/packages.config
+++ b/src/Sitecore.Support.140668/packages.config
@@ -1,9 +1,9 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="SC.Sitecore.Analytics.Aggregation" version="8.1.2" targetFramework="net45" />
-  <package id="SC.Sitecore.Analytics.Model" version="8.1.2" targetFramework="net45" />
-  <package id="SC.Sitecore.ContentSearch" version="8.1.2" targetFramework="net45" />
-  <package id="SC.Sitecore.ContentSearch.Analytics" version="8.1.2" targetFramework="net45" />
-  <package id="SC.Sitecore.ContentSearch.Linq" version="8.1.2" targetFramework="net45" />
-  <package id="SC.Sitecore.Kernel" version="8.1.2" targetFramework="net45" />
+  <package id="SC.Sitecore.Analytics.Aggregation" version="8.2.1" targetFramework="net452" />
+  <package id="SC.Sitecore.Analytics.Model" version="8.2.1" targetFramework="net452" />
+  <package id="SC.Sitecore.ContentSearch" version="8.2.1" targetFramework="net452" />
+  <package id="SC.Sitecore.ContentSearch.Analytics" version="8.2.1" targetFramework="net452" />
+  <package id="SC.Sitecore.ContentSearch.Linq" version="8.2.1" targetFramework="net452" />
+  <package id="SC.Sitecore.Kernel" version="8.2.1" targetFramework="net452" />
 </packages>
